<resources>
    <string name="app_name">Magura Hut</string>
    <string name="about_magura_hut_title">মাগুরা হাট সম্পর্কে</string>
    <string name="about_magura_hut_body">“মাগুরা-হাট” মাগুরার সর্বপ্রথম এবং সর্ববৃহৎ অনলাইন শপিং প্লাটফরম। এখানে আপনি পাবেন আপনার পছন্দ ও চাহিদা মত পণ্যের এক বিশাল সমাহার, যার গুণগত মান রক্ষার দায়িত্ব সম্পূর্ণ আমাদের। এই করনা পরিস্থিতিতে ঘরে বসেই আপনারা সবাই পাবেন আপনাদের নিত্য প্রয়োজনীয় দ্রব্যাদি। আপনাদের সকলের সুস্বাস্থ্যের কথা মাথায় রেখেই আমাদের এই ক্ষুদ্র প্রচেষ্টা।</string>
    <string name="return_policy_title">রিটার্ন পলিসি</string>
    <string name="returnn_policy_main">আপনার অর্ডারকৃত পণ্য ডেলিভারি নেয়ার সময় বুঝে নিন। অর্ডারকৃত পণ্যটির যদি কোন সমস্যা থাকে, তাহলে তাৎক্ষণিক ভাবে ডেলিভারির দায়িত্বে থাকা বেক্তির নিকট ফেরত দিয়ে দিন।\n\nবিশেষ দ্রষ্টব্য : ডেলিভারির দায়িত্বে থাকা বেক্তি পণ্য দিয়ে চলে আসার পর, কোন প্রকার কোন অভিযোগ গ্রহণযোগ্য নহে। (দয়া করে আপনার পণ্যটি সঠিক কিনা যাচাই করে নিন)।</string>
    <string name="refund_policy_main">আপনার অর্ডারকৃত কোন পণ্যের পেমেন্ট যদি আপনি অগ্রিম পরিশোধ করে থাকেন এবং পণ্যটি পাওয়ার পর যদি কোন সমস্যা থাকে তাহলে আপনি পণ্যটি ফেরত দিতে পারবেন। সেক্ষেত্রে আপনার পরিশোধকৃত টাকা ২ কর্মদিবস এর মধ্যে আপনার নিকট ফেরত দেয়া হবে।</string>
    <string name="refund_policy_title">রিফান্ড পলিসি</string>
    <string name="title_spinner">সকল প্রোডাক্ট</string>
    <string name="title_activity_orders_old">OrdersOldActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>


</resources>