<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.extras.AboutActivity"
    android:id="@+id/root"
    android:background="#FFFFFF">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_top_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bangla_font_4"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/about_magura_hut_title"
                android:textColor="@color/primaryDarkColor"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bangla_font_4"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/about_magura_hut_body"
                android:textColor="@color/secondaryTextColor"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bangla_font_4"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/return_policy_title"
                android:textColor="@color/primaryDarkColor"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bangla_font_4"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/returnn_policy_main"
                android:textColor="@color/secondaryTextColor"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bangla_font_4"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/refund_policy_title"
                android:textColor="@color/primaryDarkColor"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bangla_font_4"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/refund_policy_main"
                android:textColor="@color/secondaryTextColor"
                android:textSize="22sp" />
        </LinearLayout>
    </ScrollView>



    <LinearLayout
        android:id="@+id/linear_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_top_bar"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/bangla_font_4"
            android:gravity="center"
            android:text="মাগুরা হাট"
            android:textColor="@color/primaryTextColor"
            android:textSize="35sp" />


    </LinearLayout>



    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_top_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/bangla_font_4"
            android:gravity="center"
            android:text="APP BY DUBD (DEVELOPER UNKNOWN BANGLADESH)"
            android:textColor="@color/primaryTextColor"
            android:textSize="17sp"
            android:padding="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/bangla_font_4"
            android:gravity="center"
            android:text="DEVELOPER : SHARIF RAFID UR RAHMAN"
            android:textColor="@color/primaryTextColor"
            android:textSize="15sp"
            android:padding="5dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>